Hold the reserved keyword kinds in an EnumSet
The semantic-token classifier asks this set once per token. A hash
probe into Set.copyOf replaced what had been a switch; an EnumSet is a
bit test again.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>